crates/icydb-core/tests/ui/db_index_module_private.rs
use icydb_core::db::index::IndexStore;

fn main() {}
